--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jen-stack-jokes",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Code Challenge 2",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js"
@@ -11,8 +11,13 @@
     "type": "git",
     "url": "git+https://github.com/stevesavstrom/jen-stack-jokes.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [    
+    "prime",
+    "tau",
+    "jquery",
+    "node",
+    "express"],
+  "author": "PrimeAcademy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/stevesavstrom/jen-stack-jokes/issues"
